--- a/src/Resources/views/mollie/component/apple-pay-direct-button.twig
+++ b/src/Resources/views/mollie/component/apple-pay-direct-button.twig
@@ -1,4 +1,4 @@
-<form class="mollie-apple-pay-direct">
+<div class="mollie-apple-pay-direct {{ cols }}">
     <div id="mollie-apd-csrf" class="d-none" >
         <input type="hidden" name="_mollie_csrf_token"
                value="{{ sw_csrf('frontend.mollie.apple-pay.authorize', {"mode": "token"})}}"
@@ -17,4 +17,4 @@
         {# space to match height other buttons #}
         &nbsp;
     </button>
-</form>
+</div>
