--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -21,32 +21,10 @@
         {% if buyable and productPrice > 0 %}
             <div class="form-row mt-3 justify-content-end">
                 {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' with {cols: 'col-8'}%}
+                {% include '@MolliePayments/mollie/component/paypal-express-checkout-button.twig' with {cols: 'col-8'}%}
             </div>
         {% endif %}
+
     {% endblock %}
 
 {% endblock %}
-
-{#{% block page_product_detail_buy_quantity_container %}#}
-{#    <div class="col-4{% if productPrice > 0 %} col-sm-3 col-md-4 col-xl-3{% endif %}">#}
-{#        {% block page_product_detail_buy_quantity %}#}
-{#            {{ parent() }}#}
-{#        {% endblock %}#}
-{#    </div>#}
-{#{% endblock %}#}
-
-{#{% block page_product_detail_buy_button_container %}#}
-{#    <div class="col-8{% if productPrice > 0 %} col-sm col-md-8 col-xl{% endif %}">#}
-{#        {% block page_product_detail_buy_button %}#}
-{#            {{ parent() }}#}
-{#        {% endblock %}#}
-{#    </div>#}
-
-{#    {% if productPrice > 0 %}#}
-{#        <div class="col-12 col-sm col-md-12 col-xl flex-grow-0 d-none only-support-apple-pay">#}
-{#            <div class="mt-2 mt-sm-0 mt-md-2 mt-xl-0">#}
-{#                {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}#}
-{#            </div>#}
-{#        </div>#}
-{#    {% endif %}#}
-{#{% endblock %}#}
