--- a/src/Resources/app/storefront/src/mollie-payments/plugins/paypal-express-checkout.plugin.scss
+++ b/src/Resources/app/storefront/src/mollie-payments/plugins/paypal-express-checkout.plugin.scss
@@ -1,8 +1,25 @@
+$paypal-gold: #ffc439;
+$paypal-text-dark: #111;
+
 .mollie-paypal-express-checkout {
     button {
+        background-color: $paypal-gold;
+        border-color: $paypal-gold;
+        color: $paypal-text-dark !important;
+
+        &:hover, &:active {
+            background-color: darken($paypal-gold, 10) !important;
+            border-color: darken($paypal-gold, 10) !important;
+        }
+
+        &:focus {
+            box-shadow: 0 0 0 0.2rem transparentize($paypal-gold, 0.5) !important;
+        }
+
         svg {
-            max-height: 28.075px;
-            max-width: 105.355px;
+            margin-left: 4px;
+            max-height: 24px;
+            max-width: 90px;
         }
     }
 }
