--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -4,5 +4,17 @@
     <template v-if="mollieOrderId">
         <dt>{{ $tc('sw-order.detailExtended.labelMollieOrderId') }}</dt>
         <dd>{{ mollieOrderId }}</dd>
+
+        <dt>{{ $tc('sw-order.detailExtended.labelMolliePaymentLink') }}</dt>
+        <dd>
+            <sw-button-process size="x-small"
+                               variant="context"
+                               :disabled="!molliePaymentUrl"
+                               :processSuccess="molliePaymentUrlCopied"
+                               :isLoading="isLoading || isMolliePaymentUrlLoading"
+                               @click="copyPaymentUrlToClipboard" @process-finish="onMolliePaymentUrlProcessFinished">
+                {{ $tc('sw-order.detailExtended.buttonMolliePaymentLink') }}
+            </sw-button-process>
+        </dd>
     </template>
 {% endblock %}
