Always allow refunds to open if refunds have been made in the past.
This way they can always look back to see when something was refunded.

--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -16,7 +16,7 @@
                     <sw-button class="sw-order-line-items-grid__actions-container-refund-btn"
                                variant="ghost"
                                size="small"
-                               :disabled="!isRefundable"
+                               :disabled="!canOpenRefundModal"
                                v-if="isMollieOrder"
                                @click="onOpenRefundModal">
                         <sw-icon name="default-arrow-360-left" decorative>
