--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -87,12 +87,7 @@
 
                         {% block sw_order_line_items_grid_refund_summary_amount_remaining %}
                             <dt>{{ $tc('sw-order.detailExtended.totalRemaining') }}</dt>
-                            <dd>
-                                <sw-container columns="1fr auto" gap="16px" align="center">
-                                    {{ remainingAmount | currency(order.currency.shortName) }}
-                                    <sw-help-text :text="$tc('sw-order.detailExtended.totalRemainingHelpText')"></sw-help-text>
-                                </sw-container>
-                            </dd>
+                            <dd>{{ remainingAmount | currency(order.currency.shortName) }}</dd>
                         {% endblock %}
                     {% endblock %}
                 </sw-description-list>
