--- a/src/Resources/views/storefront/component/payment/payment-fields.html.twig
+++ b/src/Resources/views/storefront/component/payment/payment-fields.html.twig
@@ -11,7 +11,16 @@
 {% endblock %}
 
 {% block component_payment_method_description %}
-    {{ parent() }}
+    {% if "MolliePayments" in payment.handlerIdentifier and page.extensions.MollieTestModePageExtension.testMode == true %}
+        <div class="payment-method-description">
+            <strong>{{ payment.translated.name }} {{ "molliePayments.testMode.label"|trans }}</strong>
+            {% if payment.translated.description %}
+                <p>{{ payment.translated.description|raw }}</p>
+            {% endif %}
+        </div>
+    {% else %}
+        {{ parent() }}
+    {% endif %}
 
     {# load mollie creditcard components #}
     {% if payment.translated.customFields.mollie_payment_method_name == 'creditcard' %}
