--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -1,2 +1,3 @@
 @import '../mollie-payments/plugins/creditcard-components.plugin';
 @import '../mollie-payments/plugins/apple-pay-direct.plugin';
+@import './checkout/payment-selection';
