[MOL-501] fix ideal and cc fields

--- a/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
+++ b/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
@@ -5,6 +5,11 @@
         justify-content: space-between;
     }
 
+    .mollie-ideal-issuer {
+        margin-top: 15px;
+        width: 200px;
+    }
+
     .payment-method-description {
         order: -1;
     }
