[MOL-501] add margin for ideal issuer component > sw6.4

--- a/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
+++ b/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
@@ -7,10 +7,16 @@
 
     .mollie-ideal-issuer {
         margin-top: 15px;
-        width: 200px;
     }
 
     .payment-method-description {
         order: -1;
     }
 }
+
+.confirm-payment {
+    .mollie-ideal-issuer {
+        margin-top: 15px;
+    }
+}
+
