--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -1,83 +1,166 @@
-{% block sw_order_line_items_grid_grid_actions %}
+{% block sw_order_line_items_grid_actions %}
     {% parent %}
 
-<template #action-modals="{ item }">
-    <sw-modal v-if="showRefundModal === item.id"
+    <sw-container class="sw-order-line-items-grid__actions-container"
+                  columns="1fr auto"
+                  gap="16px"
+                  v-show="!editable">
+
+        {% block sw_order_line_items_grid_line_item_filter %}
+            {% parent %}
+        {% endblock %}
+
+        {% block sw_order_line_items_grid_actions_actions %}
+            <div align="right">
+                <sw-button-group :disabled="isLoading">
+                    <sw-button class="sw-order-line-items-grid__actions-container-refund-btn"
+                               variant="ghost"
+                               size="small"
+                               :disabled="!canOpenRefundModal"
+                               v-if="isMollieOrder"
+                               @click="onOpenRefundModal">
+                        <sw-icon name="default-arrow-360-left" decorative>
+                        </sw-icon>
+                        {{ $tc('mollie-payments.general.refundThroughMollie') }}
+                    </sw-button>
+                </sw-button-group>
+            </div>
+        {% endblock %}
+    </sw-container>
+
+    <sw-modal v-if="showRefundModal"
               @modal-close="onCloseRefundModal"
               :title="$tc('mollie-payments.modals.refund.title')"
-              variant="small">
+              :variant="refunds.length > 0 ? 'large' : 'small'">
+        <sw-container columns="1fr auto" :gap="refunds.length > 0 ? '16px' : '0'">
+            <sw-data-grid
+                :dataSource="refunds"
+                :columns="getRefundListColumns"
+                :showSelection="false"
+                v-if="refunds.length > 0">
+                <template #column-amount.value="{ item }">
+                    <sw-container columns="1fr auto" gap="8px" align="center">
+                        {{ item.amount.value | currency(item.amount.currency) }}
+                        <sw-help-text :text="item.description"></sw-help-text>
+                    </sw-container>
+                </template>
+                <template #column-status="{ item }">
+                    <sw-container columns="1fr auto" gap="8px" align="center">
+                        {{ getStatus(item.status) }}
+                        <sw-help-text :text="getStatusDescription(item.status)"></sw-help-text>
+                    </sw-container>
+                </template>
+                <template #column-createdAt="{ item }">
+                    {{ item.createdAt | date({hour: '2-digit', minute: '2-digit'}) }}
+                </template>
+                <template #actions="{ item }">
+                    <sw-context-menu-item :disabled="!isRefundCancelable(item)"
+                                          variant="danger"
+                                          @click="cancelRefund(item)">
+                        {{ $tc('mollie-payments.modals.refund.list.context.cancel') }}
+                    </sw-context-menu-item>
+                </template>
+            </sw-data-grid>
+            <div>
+                <sw-description-list grid="225px 1fr"
+                                     v-if="!isLoading"
+                                     class="sw-order-detail__summary-data">
+                    {% block sw_order_line_items_grid_refund_summary %}
+                        {% block sw_order_line_items_grid_refund_summary_amount_total %}
+                            <template v-if="order.price.taxStatus !== 'tax-free'">
+                                <dt>{{ $tc('sw-order.detailBase.summaryLabelAmountTotal') }}</dt>
+                                <dd>{{ order.amountTotal | currency(order.currency.shortName) }}</dd>
+                            </template>
+                        {% endblock %}
 
-        <p>
-            {{ $tc('mollie-payments.modals.refund.content', 0, { quantity: item.quantity, refundableQuantity: refundableQuantity(item) }) }}
-        </p>
+                        {% block sw_order_line_items_grid_refund_summary_amount_free_tax %}
+                            <template v-if="order.price.taxStatus === 'tax-free'">
+                                <dt>{{ $tc('sw-order.detailBase.summaryLabelAmount') }}</dt>
+                                <dd>{{ order.positionPrice | currency(order.currency.translated.shortName) }}</dd>
+                            </template>
+                        {% endblock %}
 
-        <br />
+                        {% block sw_order_line_items_grid_refund_summary_amount_refunded %}
+                            <dt>{{ $tc('sw-order.detailExtended.totalRefunds') }}</dt>
+                            <dd>{{ refundedAmount | currency(order.currency.shortName) }}</dd>
+                        {% endblock %}
 
-        <sw-number-field numberType="integer"
-                         size="medium"
-                         :step="1"
-                         :placeholder="$tc('mollie-payments.modals.refund.quantityPlaceholder')"
-                         :min="0"
-                         :value="1"
-                         :max="refundableQuantity(item)"
-                         v-model="quantityToRefund">
-        </sw-number-field>
+                        {% block sw_order_line_items_grid_refund_summary_amount_remaining %}
+                            <dt>{{ $tc('sw-order.detailExtended.totalRemaining') }}</dt>
+                            <dd>{{ remainingAmount | currency(order.currency.shortName) }}</dd>
+                        {% endblock %}
+                    {% endblock %}
+                </sw-description-list>
+
+                <sw-number-field
+                    :min="0"
+                    :max="remainingAmount"
+                    v-model="refundAmount"
+                    numberType="float"
+                    size="medium"
+                    :step="1">
+                    <template #suffix>
+                        {{ order.currency.symbol }}
+                    </template>
+                </sw-number-field>
+            </div>
+        </sw-container>
 
         <template slot="modal-footer">
             <sw-button @click="onCloseRefundModal" size="small">
                 {{ $tc('mollie-payments.modals.refund.cancelButton') }}
             </sw-button>
-            <sw-button @click="onConfirmRefund(item)" variant="primary" size="small">
+            <sw-button @click="onConfirmRefund()" variant="primary" size="small">
                 {{ $tc('mollie-payments.modals.refund.confirmButton') }}
             </sw-button>
         </template>
     </sw-modal>
+{% endblock %}
 
-    <sw-modal v-if="showShippingModal === item.id"
-              @modal-close="onCloseShippingModal"
-              :title="$tc('mollie-payments.modals.shipping.title')"
-              variant="small">
+{% block sw_order_line_items_grid_grid_actions %}
+    {% parent %}
 
-        <p>
-            {{ $tc('mollie-payments.modals.shipping.content', 0, { quantity: item.quantity, shippableQuantity: shippableQuantity(item) }) }}
-        </p>
+    <template #action-modals="{ item }">
+        <sw-modal v-if="showShippingModal === item.id"
+                  @modal-close="onCloseShippingModal"
+                  :title="$tc('mollie-payments.modals.shipping.title')"
+                  variant="small">
+            <p>
+                {{ $tc('mollie-payments.modals.shipping.content', 0, {
+                    quantity: item.quantity,
+                    shippableQuantity: shippableQuantity(item)
+                }) }}
+            </p>
 
-        <br />
+            <sw-number-field numberType="integer"
+                             size="medium"
+                             :step="1"
+                             :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
+                             :min="0"
+                             :value="1"
+                             :max="shippableQuantity(item)"
+                             v-model="quantityToShip">
+            </sw-number-field>
 
-        <sw-number-field numberType="integer"
-                         size="medium"
-                         :step="1"
-                         :placeholder="$tc('mollie-payments.modals.shipping.quantityPlaceholder')"
-                         :min="0"
-                         :value="1"
-                         :max="shippableQuantity(item)"
-                         v-model="quantityToShip">
-        </sw-number-field>
-
-        <template slot="modal-footer">
-            <sw-button @click="onCloseShippingModal" size="small">
-                {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
-            </sw-button>
-            <sw-button @click="onConfirmShipping(item)" variant="primary" size="small">
-                {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
-            </sw-button>
-        </template>
-    </sw-modal>
-</template>
+            <template slot="modal-footer">
+                <sw-button @click="onCloseShippingModal" size="small">
+                    {{ $tc('mollie-payments.modals.shipping.cancelButton') }}
+                </sw-button>
+                <sw-button @click="onConfirmShipping(item)" variant="primary" size="small">
+                    {{ $tc('mollie-payments.modals.shipping.confirmButton') }}
+                </sw-button>
+            </template>
+        </sw-modal>
+    </template>
 {% endblock %}
 
 {% block sw_order_line_items_grid_grid_actions_show %}
     {% parent %}
 
-<sw-context-menu-item :disabled="!isShippable(item)"
-                      icon="default-object-paperplane"
-                      @click="onShipItem(item)">
-    {{ $tc('mollie-payments.general.shipThroughMollie') }}
-</sw-context-menu-item>
-
-<sw-context-menu-item :disabled="!isRefundable(item)"
-                      icon="default-arrow-360-left"
-                      @click="onRefundItem(item)">
-    {{ $tc('mollie-payments.general.refundThroughMollie') }}
-</sw-context-menu-item>
+    <sw-context-menu-item :disabled="!isShippable(item)"
+                          icon="default-object-paperplane"
+                          @click="onShipItem(item)">
+        {{ $tc('mollie-payments.general.shipThroughMollie') }}
+    </sw-context-menu-item>
 {% endblock %}
+
