--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -1,7 +1,30 @@
+{% block sw_order_detail_base_line_items_grid %}
+    <sw-order-line-items-grid :order="order"
+                              :context="versionContext"
+                              :editable="isEditing"
+                              ref="sw-order-line-item-grid"
+                              :remainingAmount="remainingAmount"
+                              :refundedAmount="refundedAmount"
+                              :refunds="refunds"
+                              @refund-success="saveAndReload"
+                              @refund-cancelled="saveAndReload"
+                              @item-delete="saveAndRecalculate"
+                              @item-edit="recalculateAndReload"
+                              @existing-item-edit="saveAndRecalculate"
+                              @item-added="recalculateAndReload"
+                              @item-cancel="recalculateAndReload">
+    </sw-order-line-items-grid>
+{% endblock %}
+
 {% block sw_order_detail_base_line_items_summary_entries %}
     {% parent %}
-    <dt v-if="refundedItems > 0"><strong>{{ $tc('sw-order.detailExtended.totalRefunds', 0, { quantity: refundedItems }) }}</strong></dt>
-    <dd v-if="refundedItems > 0"><strong>{{ refundedAmount | currency(order.currency.shortName) }}</strong></dd>
+    <dt v-if="refundedAmount > 0"><strong>{{ $tc('sw-order.detailExtended.totalRefunds') }}</strong></dt>
+    <dd v-if="refundedAmount > 0"><strong>{{ refundedAmount | currency(order.currency.shortName) }}</strong></dd>
+
+    <dt v-if="refundAmountPending > 0"><strong>{{ $tc('sw-order.detailExtended.totalRefundsPending') }}</strong></dt>
+    <dd v-if="refundAmountPending > 0"><strong>{{ refundAmountPending | currency(order.currency.shortName) }}</strong></dd>
+
     <dt v-if="shippedItems > 0"><strong>{{ $tc('sw-order.detailExtended.totalShipments', 0, { quantity: shippedItems }) }}</strong></dt>
     <dd v-if="shippedItems > 0"><strong>{{ shippedAmount | currency(order.currency.shortName) }}</strong></dd>
 {% endblock %}
+
