--- a/src/Resources/views/storefront/component/payment/payment-fields.html.twig
+++ b/src/Resources/views/storefront/component/payment/payment-fields.html.twig
@@ -13,7 +13,7 @@
 {% block component_payment_method_description %}
     {% if "MolliePayments" in payment.handlerIdentifier and page.extensions.MollieTestModePageExtension.testMode == true %}
         <div class="payment-method-description">
-            <strong>{{ payment.translated.name }} {{ "molliePayments.testMode.label"|trans }}</strong>
+            <strong>{{ payment.translated.name }} ({{ "molliePayments.testMode.label"|trans }})</strong>
             {% if payment.translated.description %}
                 <p>{{ payment.translated.description|raw }}</p>
             {% endif %}
