--- a/src/Resources/views/storefront/page/account/index.html.twig
+++ b/src/Resources/views/storefront/page/account/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block page_account_overview_payment_content %}
     {% if "MolliePayments" in context.customer.defaultPaymentMethod.handlerIdentifier and page.extensions.MollieTestModePageExtension.testMode == true %}
-        <strong>{{ context.customer.defaultPaymentMethod.translated.name }} {{ "molliePayments.testMode.label"|trans }}</strong>
+        <strong>{{ context.customer.defaultPaymentMethod.translated.name }} ({{ "molliePayments.testMode.label"|trans }})</strong>
         <p>{{ context.customer.defaultPaymentMethod.description }}</p>
     {% else %}
         {{ parent() }}
