--- a/src/Resources/views/storefront/page/checkout/confirm/confirm-payment.html.twig
+++ b/src/Resources/views/storefront/page/checkout/confirm/confirm-payment.html.twig
@@ -4,6 +4,6 @@
     {{ parent() }}
 
     {% if "MolliePayments" in context.paymentMethod.handlerIdentifier and page.extensions.MollieTestModePageExtension.testMode == true %}
-         {{ "molliePayments.testMode.label"|trans }}
+         ({{ "molliePayments.testMode.label"|trans }})
     {% endif %}
 {% endblock %}
