--- a/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/extension/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -5,6 +5,7 @@
                               ref="sw-order-line-item-grid"
                               :remainingAmount="remainingAmount"
                               :refundedAmount="refundedAmount"
+                              :voucherAmount="voucherAmount"
                               :refunds="refunds"
                               @refund-success="saveAndReload"
                               @refund-cancelled="saveAndReload"
