MOL-216: Add product inheritance and translation handling for vouchers

--- a/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.scss
+++ b/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.scss
@@ -29,4 +29,9 @@
     .sw-product-detail-mollie-vouchers__button-readmore {
         text-align: center;
     }
+
+    .sw-product-detail-mollie-vouchers__inheritance-warning {
+        margin-top: 20px;
+        font-size: $font-size-default;
+    }
 }
