--- a/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.html.twig
+++ b/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.html.twig
@@ -23,15 +23,35 @@
                 <sw-button class="sw-product-detail-mollie-vouchers__button-readmore" :block="true" variant="primary" size="small" link="https://github.com/mollie/Shopware6/wiki/Voucher">READ MORE</sw-button>
             </sw-container>
 
-            <sw-select-field
-                    :label="$tc('mollie-payments.vouchers.VOUCHER_TYPE_CAPTION')"
-                    class="mollie-voucher-type"
-                    :value="selectedVoucherType"
-                    @change="onVoucherChanged">
-                <option v-for="type in voucherTypes" :key="type.key" :value="type.key">
-                    {{ type.name }}
-                </option>
-            </sw-select-field>
+            <sw-container columns="1fr" v-if="isDefaultLanguage">
+                <sw-inherit-wrapper
+                        :label="$tc('mollie-payments.vouchers.VOUCHER_TYPE_CAPTION')"
+                        v-model="productVoucherType"
+                        :hasParent="hasParentProduct"
+                        :inheritedValue="parentVoucherType"
+                        :customInheritationCheckFunction="checkInheritance"
+                        :customRestoreInheritanceFunction="restoreInheritance"
+                        :customRemoveInheritanceFunction="removeInheritance">
+                    <template #content="content">
+                        <sw-select-field
+                                class="mollie-voucher-type"
+                                :value="content.currentValue"
+                                :disabled="content.isInherited"
+                                @change="onVoucherChanged">
+                            <option v-for="type in voucherTypes" :key="type.key" :value="type.key">
+                                {{ type.name }}
+                            </option>
+                        </sw-select-field>
+                    </template>
+                </sw-inherit-wrapper>
+            </sw-container>
+
+            <sw-container columns="1fr" v-if="!isDefaultLanguage">
+                <sw-alert variant="default" :showIcon="true" :closable="false" class="sw-product-detail-mollie-vouchers__inheritance-warning">
+                    {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_DEFAULTLANGUAGE') }}
+                </sw-alert>
+            </sw-container>
+
         </sw-container>
     </sw-card>
 {% endblock %}
