--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -13,10 +13,12 @@
         {% endif %}
     {% endif %}
 
-    {% if productPrice > 0 %}
-        <div class="mb-2 d-none only-support-apple-pay">
-            {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
-        </div>
+    {% if mollie_applepaydirect_enabled == true %}
+        {% if productPrice > 0 %}
+            <div class="mb-2 d-none only-support-apple-pay">
+                {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
+            </div>
+        {% endif %}
     {% endif %}
 
     {{ parent() }}
