--- a/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.html.twig
+++ b/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.html.twig
@@ -1,4 +1,5 @@
-{% block sw_product_detail_mollie_vouchers %}
+<div>
+    {% block sw_product_detail_mollie_vouchers %}
     <sw-card :title="$tc('mollie-payments.vouchers.CARD_TITLE')">
         <sw-container gap="0px 30px" class="sw-product-detail-mollie-vouchers-form__container">
 
@@ -53,7 +54,82 @@
                     {{ $tc('mollie-payments.vouchers.VOUCHER_INFO_DEFAULTLANGUAGE') }}
                 </sw-alert>
             </sw-container>
-
         </sw-container>
     </sw-card>
 {% endblock %}
+
+{% block sw_product_detail_mollie_subscription %}
+        <sw-card :title="$tc('mollie-subscription.card-title')">
+            <sw-container gap="0px 30px" class="sw-product-detail-mollie-subscription-form__container">
+                <sw-container columns="1fr">
+                    <span class="sw-product-detail-mollie-subscription__description-title">
+                        {{ $tc('mollie-subscription.title') }}
+                    </span>
+                </sw-container>
+
+                <sw-container columns="1fr">
+                    <p class="sw-product-feature-set-form__description-body">
+                        {{ $tc('mollie-subscription.description') }}
+                    </p>
+                </sw-container>
+
+                <sw-container gap="0px 30px" class="sw-product-detail-mollie-subscription-form__container">
+                <sw-container columns="1fr" v-if="isDefaultLanguage">
+
+                    <sw-switch-field
+                            name="mollieSubscriptionProduct"
+                            v-model="mollieSubscriptionProduct"
+                            :hasParent="hasParentProduct"
+                            :label="$tc('mollie-subscription.mollieSubscriptionProduct')"
+                            @change="onChanged($event, 'mollieSubscriptionProduct')"/>
+
+                    <sw-text-field
+                            name="mollieSubscriptionIntervalAmount"
+                            v-model="mollieSubscriptionIntervalAmount"
+                            :hasParent="hasParentProduct"
+                            :label="$tc('mollie-subscription.mollieSubscriptionIntervalAmount')"
+                            @change="onChanged($event, 'intervalAmount')"/>
+
+                    <sw-select-field
+                            name="mollieSubscriptionIntervalType"
+                            v-model="mollieSubscriptionIntervalType"
+                            :label="$tc('mollie-subscription.mollieSubscriptionIntervalType')"
+                            :hasParent="hasParentProduct"
+                            class="mollie-subscription-interval-type"
+                            @change="onChanged($event, 'intervalType')">
+                        <option v-for="interval in intervalTypes" :key="interval.key" :value="interval.key">
+                            {{ interval.name }}
+                        </option>
+                    </sw-select-field>
+
+                    <sw-text-field
+                            name="mollieSubscriptionRepetitionAmount"
+                            v-model="mollieSubscriptionRepetitionAmount"
+                            :hasParent="hasParentProduct"
+                            :label="$tc('mollie-subscription.mollieSubscriptionRepetitionAmount')"
+                            @change="onChanged($event, 'repetitionAmount')"/>
+
+                    <sw-select-field
+                            name="mollieSubscriptionRepetitionType"
+                            v-model="mollieSubscriptionRepetitionType"
+                            :label="$tc('mollie-subscription.mollieSubscriptionRepetitionType')"
+                            :hasParent="hasParentProduct"
+                            class="mollie-subscription-repetition-type"
+                            @change="onChanged($event, 'repetitionType')">
+                        <option v-for="repetition in repetitionTypes" :key="repetition.key" :value="repetition.key">
+                            {{ repetition.name }}
+                        </option>
+                    </sw-select-field>
+
+                </sw-container>
+            </sw-container>
+
+                <sw-container columns="1fr" v-if="!isDefaultLanguage">
+                    <sw-alert variant="default" :showIcon="true" :closable="false" class="sw-product-detail-mollie-subscription__inheritance-warning">
+                        {{ $tc('mollie-subscription.infoDefaultLanguage') }}
+                    </sw-alert>
+                </sw-container>
+            </sw-container>
+        </sw-card>
+{% endblock %}
+</div>
