--- a/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.scss
+++ b/src/Resources/app/administration/src/module/sw-product/view/sw-product-detail-mollie/sw-product-detail-mollie.scss
@@ -1,6 +1,9 @@
 @import "~scss/variables";
 
+.sw-product-detail-mollie-subscription-form__container,
 .sw-product-detail-mollie-vouchers-form__container {
+
+    .sw-product-detail-mollie-subscription__description-title,
     .sw-product-detail-mollie-vouchers__description-title {
         font-weight: $font-weight-bold;
         font-size: $font-size-default;
